--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": { 
+    "start": "node index.js" 
+  },
   "devDependencies": {
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3"
