--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "scripts": { 
-    "start": "node index.js" 
+  "name": "madruguinha-bot",
+  "version": "1.0.0",
+  "description": "A bot for watch players ranking progress",
+  "main": "node index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
+  "engines": { "node": "12.16.3" },
   "devDependencies": {
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3"
   },
+
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
     "axios": "^0.19.2",
