--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "discord.js": "^12.2.0",
     "jquery": "^3.5.1",
     "jsdom": "^16.2.2",
-    "ytdl-core": "^2.1.4"
+    "ytdl-core": "^2.1.4",
+    "express": "^4.17.1"
   }
 }
