--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
   "name": "madruguinha-bot",
-  "version": "1.2",
+  "version": "1.3",
   "description": "A bot for watch players ranking progress",
   "main": "node index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "engines": { "node": "12.16.3" },
+  "engines": {
+    "node": "12.16.3"
+  },
   "devDependencies": {
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3"
   },
-
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "discord.js": "^12.2.0",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
     "jsdom": "^16.2.2",
-    "ytdl-core": "^2.1.4",
-    "express": "^4.17.1"
+    "ytdl-core": "^2.1.4"
   }
 }
