--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "eslint-plugin-prettier": "^3.1.3"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.3.2",
-    "axios": "^0.21.4",
-    "bluebird": "^3.7.2",
-    "cheerio": "^1.0.0-rc.10",
+    "@discordjs/opus": "^0.3.3",
+    "axios": "^0.21.1",
     "discord.js": "^12.2.0",
     "express": "^4.17.1",
-    "googleapis": "^92.0.0",
-    "imap": "^0.8.19",
+    "ffmpeg-static": "^4.4.0",
     "jquery": "^3.5.1",
-    "js-base64": "^3.7.2",
     "jsdom": "^16.2.2",
+    "ytdl-core": "^2.1.4",
     "mailparser": "^3.4.0",
-    "open": "^8.4.0",
-    "ytdl-core": "^2.1.4"
+    "googleapis": "^92.0.0",
+    "json": "^11.0.0",
+    "js-base64": "^3.7.2",
+    "cheerio": "^1.0.0-rc.10",
+    "xml2js": "^0.4.23",
+    "xml-js": "^1.6.11"
   }
 }
